--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,18 @@ a {
 
 /* CLASSES */
 
-.splash {
+.splash::after {
+
+        background-color: #563d7c;
+        content: "";
+
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        opacity: 0.4;
+    
+
+
     background-attachment: fixed;
     /* background-size: cover; */
     /* background-color: #763dc6;
@@ -168,15 +179,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
 background-size: contain;
 background-position: center;
-    background-image: -webkit-gradient(
-            linear,
-            left top,
-            left bottom,
-            from(var(--transparency-main)),
-            to(var(--transparency-secondary))
-        ),
-        url("data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11 18c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm48 25c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm-43-7c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm63 31c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM34 90c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm56-76c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM12 86c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm28-65c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm23-11c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-6 60c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm29 22c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zM32 63c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm57-13c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-9-21c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM60 91c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM35 41c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM12 60c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2z' fill='%23763dc6' fill-opacity='0.41' fill-rule='evenodd'/%3E%3C/svg%3E");,
-        url("/Users/corey/Desktop/Dev/Portfolio/Ashley-Website/Ashley-Profesional-Site/img/ash-pic.jpg");
+    background-image: url("/Users/corey/Desktop/Dev/Portfolio/Ashley-Website/Ashley-Profesional-Site/img/ash-pic.jpg");
 }
 
 
@@ -331,16 +334,32 @@ color: var(--comp-color);
 }
 
 
+nav a{
 
-#topnav{
-    padding-top:1em;
+        padding: 1rem 2rem;
+
+  } 
+
+  .nav a {
+    text-decoration: none;
+    display: block;
+    padding: 1em;
+  }
+
+.nav{
+
+    height:50px;
     color: black;
     background-color: transparent;
-    display: block;
-    /* width:100vw; */
-    /* height:150px; */
-    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+
 }
+
+
 *:focus {
     outline: 1;
 }
@@ -355,14 +374,23 @@ header {
 
 header {
     filter:grayscale;
-    background-image: url('../img/ash-pic.jpg');
+    background-image: linear-gradient(to bottom, rgba(118, 61, 198, 0.5) 0%,rgba(201, 96, 245, 0.5) 100%),url('../img/ash-pic.jpg');
     background-size: cover;
-    background-blend-mode: saturation;
-
+    /* background-blend-mode: saturation; */
     padding: 2rem 0;
     color: #fff;
     text-shadow: 0px 1px 6px rgba(0,0,0,0.6);
     
+  }
+
+  header {
+    background-color: #563d7c;
+    content: "";
+    width: 100vw;
+    height: 100vh;
+    /* z-index: -1; */
+    opacity: 1;
+
   }
   h1 {
     -ms-transform: skewY(-15deg);
