--- a/css/main.css
+++ b/css/main.css
@@ -1,98 +1,3 @@
-<!-- build:css Ashley-Profesional-Site/css/main-min.css -->
-/*! HTML5 Boilerplate v6.0.1 | MIT License | https://html5boilerplate.com/ */
-
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
-html {
-    background-color: white;
-    color: #222;
-}
-
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-    display: block;
-    width: 85%;
-    height: 2px;
-    border: 0;
-    
-    margin: 5em auto;
-    padding: 0;
-    box-shadow: 0 0px 28px rgba(118, 61, 198, 0.85), 0 10px 10px rgba(118, 61, 198, 0.22); */
-}
-
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
-iframe,
-video {
-    vertical-align: middle;
-}
-
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-    resize: vertical;
-}
-
-/* ==========================================================================
-   Browser Upgrade Prompt
-   ========================================================================== */
-
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-
-/* ==========================================================================
-   Corey Written Sections
-   ========================================================================== */
-
-
-/* ==========================================================================
-   VARIABLES
-   ========================================================================== */
-
 
 * {
     -webkit-font-smoothing: antialiased;
@@ -123,7 +28,6 @@ textarea {
 }
 
 /* 
-/* CLOSE OF MEDIA QUERY     */
 
 /* ==========================================================================
    ELEMENTS
@@ -157,6 +61,14 @@ a {
     height: auto;
     font-weight: normal;
 }
+
+.header-h1-APHD-div{
+    display:flex;
+    align-content: flex-end;
+flex-direction: column;
+}
+
+
 
 /* CLASSES */
 
@@ -365,54 +277,50 @@ nav a{
 
 /* Splash header */
 
+.header-h1-APHD{
+display:flex;
+align-content: flex-end;
 
-header {
-  display: flex;
-  height: 100vh;
+
 }
 
 header {
-
+    height: 100vh;
     background-image: linear-gradient(to bottom, rgba(118, 61, 198, 0.5) 0%,rgba(201, 96, 245, 0.5) 100%),url('/img/Ash-hero-image-resized-optimized.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: left center;
     /* background-blend-mode: saturation; */
-    padding: 2rem 0;
+    /* padding: 2rem 0; */
     color: #fff;
     text-shadow: 0px 1px 6px rgba(0,0,0,0.6);
     
   }
 
-
+ 
+  
   h1 {
-    -ms-transform: skewY(-15deg);
+    -ms-transform: skewY(-12deg);
     /* IE 9 */
-    -webkit-transform: skewY(-15deg);
+    -webkit-transform: skewY(-12deg);
     /* Safari */
-    transform: skewY(-15deg);
+    transform: skewY(-12deg);
   color: var(--comp-color);
     font-family: "Kaushan Script";
-    text-align: center;
-    font-size: 1.5rem;
     letter-spacing: 0.4rem;
-    -ms-flex-line-pack: center;
-    align-content: center;
     text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.9), 0px 8px 13px rgba(0, 0, 0, 0.5),
                 0px 18px 23px rgba(0, 0, 0, 0.5);
-    width: 80%;
-    margin: auto;
-    line-height: 1.1em;
+    margin: 0;
     font-size: 2rem;
-    @media (min-width: 500px) {
-      font-size: 4rem;
-    }
+
   }
 
   .locations-item {
       flex-direction: column;
   }
   
+
+
 .location-headers{
     font-family: kaushan script;
     color: var(--comp-color);
@@ -993,9 +901,9 @@ background-color:hsla(265, 55%, 51%, 0.25),
         position: absolute;
         left: 40%;
         top: 40%; */
-        -webkit-transform: translate(-50%,-50%);
+        /* -webkit-transform: translate(-50%,-50%);
             -ms-transform: translate(-50%,-50%);
-                transform: translate(-50%,-50%);
+                transform: translate(-50%,-50%); */
         color: var(--comp-color);
             font-family: "Kaushan Script";
             text-align: center;
@@ -1570,176 +1478,4 @@ form {
     filter: url(#drop-shadow);
     -webkit-filter: drop-shadow(12px 12px 4px black);
     filter: drop-shadow(12px 12px 4px black);
-}
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Hide visually and from screen readers
- */
-
-.hidden {
-    display: none !important;
-}
-
-/*
- * Hide only visually, but have it available for screen readers:
- * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- *
- * 1. For long content, line feeds are not interpreted as spaces and small width
- *    causes content to wrap 1 word per line:
- *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
- */
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    -webkit-clip-path: inset(50%);
-    clip-path: inset(50%);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-    white-space: nowrap;
-    /* 1 */
-}
-
-/*
- * Extends the .visuallyhidden class to allow the element
- * to be focusable when navigated to via the keyboard:
- * https://www.drupal.org/node/897638
- */
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    -webkit-clip-path: none;
-    clip-path: none;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-    white-space: inherit;
-}
-
-/*
- * Hide visually and from screen readers, but maintain layout
- */
-
-.invisible {
-    visibility: hidden;
-}
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    /* 1 */
-    display: table;
-    /* 2 */
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-}
-
-@media print,
-    (-webkit-min-device-pixel-ratio: 1.25),
-    (-o-min-device-pixel-ratio: 5/4),
-    (min-resolution: 1.25dppx),
-    (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
-}
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   http://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
-
-@media print {
-    *,
-    *:before,
-    *:after {
-        background: transparent !important;
-        color: #000 !important;
-        /* Black prints faster:
-                                   http://www.sanbeiji.com/archives/953 */
-        -webkit-box-shadow: none !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-    /*
-     * Don't show links that are fragment identifiers,
-     * or use the `javascript:` pseudo protocol
-     */
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
-    pre {
-        white-space: pre-wrap !important;
-    }
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-    /*
-     * Printing Tables:
-     * http://css-discuss.incutio.com/wiki/Printing_Tables
-     */
-    thead {
-        display: table-header-group;
-    }
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
 }
